[tool.poetry]
name = "discord-ext-helpers"
version = "1.0.0"
description = "A collection of helpers to use with discord.py"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

packages = [
    { include = "discord/ext/helpers" }
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
